[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/spriteframes/skeleton.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/scripts/Skeleton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 12 )

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = Vector2( 100, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "attack"
offset = Vector2( 9, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
